# repolens

./: .gitignore  .replit  main.py  models.py  pasted_text_1726255697604.txt  pasted_text_1726320739749.txt  pasted_text_1726321526521.txt  pasted_text_1726324702548.txt  pasted_text_1726325077449.txt  pyproject.toml  replit.nix
codenexus/: __init__.py  analyzer.py  api.py  models.py  packager.py
docs/: conf.py  index.rst
docs/rfcs/: 000-codenexus-initial-proposal.org  001-codenexus-coordination-plan.org  002-codenexus-agent-architecture.org  003-codenexus-rfc-process.org  004-codenexus-code-style-inference-and-pr-review-agent.org  005-codenexus-project-tooling-and-development-workflow.org  006-codenexus-devops-getting-started-guide.org  007-codenexus-frontend-development-getting-started-guide.org  008-codenexus-project-management-getting-started-guide.org  009-codenexus-quality-assurance-and-testing-strategy.org  010-codenexus-security-strategy-and-implementation-plan.org  011-codenexus-documentation-strategy-and-implementation-plan.org  012-codenexus-aws-infrastructure-observability-and-monitoring-strategy.org  013-codenexus-get-it-done.org  014-codenexus-simplified-team.org  015-codenexus-coordinator-model.org  016-repolens-renaming.org  017-ml-predictive-analysis.org  018-agent-framework-integration.org  023-repolens.el  (+16 more)
repolens/: analyzer.py  api.py  models.py  packager.py  utils.py
scripts/: test_reposlens_oauth_setup.py
templates/: base.html  index.html
tests/: test_analyzer.py  test_api.py  test_packager.py
utils/: analyzer.py  converter.py
(+2 files in other folders)
