[tool.poetry]
name = "repl-nix-attachmentanalyzer-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
gitpython = "^3.1.43"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
flask-caching = "^2.3.0"
selenium = "^4.24.0"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
